--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* styles.css */
+@media (max-width: 768px) { 
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -321,4 +322,5 @@ a:hover {
     width: 30px;
     height: 30px;
     margin-right: 5px;
+}
 }
