--- a/styles.css
+++ b/styles.css
@@ -271,3 +271,10 @@ a:hover {
     height: 30px;
     margin-right: 5px;
 }
+
+#project-2-details img {
+    object-fit: contain;
+    width: 100%; /* Imagem ocupa 100% da largura do container */
+    max-width: 500px; /* Largura máxima da imagem */
+    height: auto; /* Ajusta altura automaticamente */
+  }
