--- a/styles.css
+++ b/styles.css
@@ -383,3 +383,30 @@ a:hover {
     --background-color: #333; /* Cor de fundo no modo escuro */
     --text-color: #fff; /* Cor do texto no modo escuro */
   }
+
+
+  /* introdução */
+
+  html,
+body {
+    margin: 0;
+    overflow: hidden;
+}
+
+#space-container-top {
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    z-index: 10;
+}
+
+img.cosmos {
+    position: absolute;
+    z-index: 20;
+    width: 24vw;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
