--- a/intro.css
+++ b/intro.css
@@ -1,19 +1,22 @@
+html, body {
+  margin: 0; 
+  overflow: hidden;
+}
+#space-container-top {
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
+img.cosmos {
+  position: absolute;
+  z-index: 20;
+  width: 24vw;
+  margin: auto;
+  top: 0; 
+  left: 0; 
+  bottom: 0;  
+  right: 0;
+}
 
- html, body {
-    margin: 0; 
-    overflow: hidden;
-  }
-  #space-container-top {
-    opacity: 0.6;
-    position: absolute;
-    top: 0;
-    z-index:10;
-  }
-  img.cosmos {
-   position: absolute;
-   z-index: 20;
-   width: 24vw;
-   margin: auto;
-   top: 0; left: 0; bottom: 0;  right: 0;
-  }
-  
+
