--- a/intro.css
+++ b/intro.css
@@ -11,8 +11,7 @@ html, body {
   img.cosmos {
    position: absolute;
    z-index: 20;
-   width: 24vw;
+   width: 70%;
    margin: auto;
    top: 0; left: 0; bottom: 0;  right: 0;
   }
-  
